feature(files): Add files endpoint
